wrapped the logo SVG in an a tag

--- a/templates/master.html
+++ b/templates/master.html
@@ -118,6 +118,7 @@
 <body>
 	<header>
 		<div class="heading wrapper">
+			<a href="/">
 			<div class="logo">
 					<svg viewBox="0 0 400 400">
 						<circle class="main-circle" cx="200" cy="200" r="200" />
@@ -159,6 +160,7 @@
 							</linearGradient>
 						</defs>
 					</svg>
+				</a>
 			</div>
 			<h1>{{ site_title }}</h1>
 		</div>
