Change style and html files

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -1,14 +1,14 @@
 @font-face {
 	font-family: 'Imprima';
 	src: url('../assets/fonts/Imprima/Imprima-Regular.ttf') format('truetype');
-	font-weight: 400;
+	font-weight: 600;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'Yusei_Magic';
 	src: url('../assets/fonts/Yusei_Magic/YuseiMagic-Regular.ttf') format('truetype');
-	font-weight: 300;
+	font-weight: 400;
 	font-style: normal;
 }
 
@@ -25,12 +25,13 @@
 	--final: -50px;
 
 
-	--heading-text:"Yusei_Magic", sans-serif;
-	--body-text:"Imprima", sans-serif;
+	--heading-text:'Yusei_Magic', sans-serif;
+	--body-text:'Imprima', sans-serif;
 }
 
 body {
 	font-family: var(--body-text);
+	font-size: 1.2rem;
 	background-color: var(--bg-color);
 	color: var(--text-color);
 }
@@ -104,12 +105,8 @@ h6 {
 }
 
 .name hgroup h1 {
-	/* font-size: 5rem; */
+	font-size: 1.6rem;
 	color: var(--dark-green);
-}
-
-.intro h2 {
-	/* font-size: 4rem; */
 }
 
 .menu {
@@ -126,9 +123,6 @@ h6 {
 	background-color: var(--dark-green);
 }
 
-.menu.active:hover {
-	background-color: #69A5A1;
-}
 
 .menu-text {
 	display: inline-block;
@@ -140,6 +134,10 @@ h6 {
 	font-family: var(--heading-text);
 	/* font-size: 4rem; */
 	color: var(--cv-bg-color);
+}
+
+.nav-main .menu-list { 
+	font-size: 5rem;
 }
 
 .menu:hover::before {
@@ -155,6 +153,7 @@ h6 {
 .menu-list li {
 	overflow: hidden;
 }
+
 
 .menu-list li a {
 	--delay: 0s;
@@ -202,7 +201,7 @@ h6 {
 
 #cvButton {
 	font-family: var(--body-text);
-	/* font-size: 1.5rem; */
+	/* font-size: 1.5rem;  2 diffrent sizes */
 	background-color: var(--orange);
 	color: var(--dark-green);
 	border: none;
