--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <article>
-	<header class="name">
+	<header class="cv_header">
 		<div class="photo">
 			<figure>
 				<img
@@ -9,12 +9,6 @@
 		</div>
 		<hgroup>
 			<h1>Paula<br />Burghelea</h1>
-			<h2>CV/Resume</h2> <!-- Do we actually want to display this? -->
-			<!--
-				article header h2 {
-					display:none;2
-				}
-			-->
 		</hgroup>
 	</header>
 	<section class="profile">
