css work - fixed the main header image position and added more text to the education

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -62,7 +62,7 @@ h3 {
 }
 
 h4 {
-	font-size: 16px;
+	font-size: clamp(18px, 3vw, 1.3rem);
 }
 
 h5,
@@ -78,7 +78,7 @@ h6 {
 article section,
 article > header {
 	padding:
-		var(--padding)
+		var(--margin)
 		var(--col-offset) /* <-- 5vw was added -- but why? */
 		var(--padding)
 		calc(5vw + var(--padding));
@@ -208,11 +208,6 @@ body > nav {
 }
 
 header > section {
-	/* display: flex;
-
-	justify-content: space-between;
-	align-items: center; */
-	/* position: relative; */
 	flex-grow: 1;
 }
 
@@ -232,7 +227,7 @@ header > section {
 
 	max-width: 450px;
 
-	margin: var(--padding) auto 0;
+	margin: 200px auto 0;
 
 	/* flex-grow: 1; */
 	z-index: 2;
@@ -478,10 +473,6 @@ article > header h2 {
 	align-items: center;
 	flex-wrap: wrap;
 	gap: 0 var(--padding);
-}
-
-.schools li {
-	margin: var(--margin) 0;
 }
 
 .education .schools hgroup h4 {
