--- a/templates/index.html
+++ b/templates/index.html
@@ -19,22 +19,6 @@
 	</section>
 	<section class="work-experience">
 		<h3>Work Experience</h3>
-
-		<!--
-			(monospaced font)
-			JAN
-			FEB
-			MAR
-			APR
-			MAY
-			JUN
-			JUL
-			AUG
-			SEP
-			OCT
-			NOV
-			DEC
-		-->
 		<ol class="jobs">
 			<li>
 				<hgroup>
@@ -150,12 +134,16 @@
 					<h6>
 						<time datetime="2022">2022</time>
 					</h6>
-					<h4>Full-Stack Developer Bootcamp</h4>
+					<h4>Software Engineering Course</h4>
 					<h5>The Jump Digital School - Remote, UK</h5>
 				</hgroup>
-				<p>
-					Things that you did...
-				</p>
+				<ul>
+					<li>Developed and deployed full Stack applications over the course of a 30 weeks bootcamp program;</li>
+					<li>Lerned about the constituent parts of the internet and websites / web applications: The client-server model (inc. APIs);</li>
+					<li>Programming languages and libraries to control those constituent parts e.g. HTML, CSS, JavaScript (inc. NodeJS & React), SQL/NoSQL, Shell, GraphQL, JSON and YAML;</li>
+					<li>Learned how to use tools & systems to create, edit, debug, test, deploy & host my code;</li>
+					<li>Industry standards and best practice for writing software.</li>
+				</ul>
 			</li>
 			<li>
 				<hgroup>
@@ -170,7 +158,7 @@
 					</h6>
 				</hgroup>
 				<p>
-					Learned to build  an action-oriented framework for the team and each individual. This increases both the quantity and quality of performance conversations by matching an individual’s Performance Readiness® Level for a specific task with the appropriate leadership style.
+					Learned to build  an action-oriented framework for the team and each individual. This increased both the quantity and quality of performance conversations by matching an individual’s Performance Readiness Level for a specific task with the appropriate leadership style.
 				</p>
 			</li>
 			<li>
