--- a/public/css/animation.css
+++ b/public/css/animation.css
@@ -54,11 +54,11 @@
 
 
 .header-img.endposition .plane {
-	animation: fly 8s forwards linear;
+	animation: fly 10s forwards linear;
 }
 
 .header-img img {
-	--duration: 5s;
+	--duration: 10s;
 	transition: transform 3s;
 	transition:
 		top var(--duration),
@@ -71,7 +71,7 @@
 }
 
 .header-img.endposition .leaf-07 {
-	--duration: 5s;
+	--duration: 13s;
 	top: 112%;
 	left: -64%;
 }
@@ -82,26 +82,27 @@
 }
 
 .header-img.endposition .leaf-05 {
-	--duration: 8s;
+	--duration: 18s;
 	top: 14%;
 	left: -55%;
 }
 
 .header-img.endposition .leaf-04 {
-	--duration: 8s;
+	--duration: 20s;
 	top: 55%;
-	left: -109%;
+	left: -209%;
+	opacity: 50%;
 }
 
 .header-img.endposition .leaf-03 {
-	--duration: 5s;
+	--duration: 10s;
 	top: 92%;
 	left: -17%;
 
 }
 
 .header-img.endposition .leaf-02 {
-	--duration: 7s;
+	--duration: 15s;
 	top: 108%;
 	left: 104%;
 }
