resolved menu bug and changed profile image

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 		<div class="photo">
 			<figure>
 				<img
-					src="/assets/img/resume_profile.jpg"
+					src="/assets/img/profile_ai.jpg"
 					alt="profile picture" />
 			</figure>
 		</div>
