text corrected and adjusted font size for the work-experience

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -250,6 +250,11 @@ article > header {
 	background-color: var(--active-orange);
 }
 
+.work-experience ol li ol > li,
+.work-experience ol li > ul > li {
+	font-family: var(--heading-text);
+}
+
 .roles,
 .education {
 	color: var(--dark-green);
