--- a/templates/master.html
+++ b/templates/master.html
@@ -146,8 +146,7 @@
 		<section class="wrapper">
 			<div class="intro">
 				<h2>Hi! I am a Junior Web-Developer</h2>
-				<p>I have lived and worked in Romania, Italy, Portugal and currently in the United Kingdom. I was raised to strive for perfection and look for ways I can improve my life, my work and the relationship 
-				I have with people arround me.
+				<p>I have lived and worked in Romania, Italy, Portugal and currently live in the United Kingdom. I was raised to strive for perfection and look for ways I can improve my life, work and my relationships.
 				</p>
 				<button id="cvButton">View CV</button>
 			</div>
