--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -7,7 +7,7 @@
 	--col-offset: calc(5vw + var(--padding) + var(--menu-size) + 10px);
 
 	--diameter: clamp(230px, 40vw, 450px);
-	--logo-size: 30px;
+	--logo-size: clamp(30px, 40vw, 50px);
 	--menu-size: 23px;
 
 	--gap: var(--padding);
@@ -162,6 +162,20 @@ body > nav {
 	width: var(--logo-size);
 	aspect-ratio: 1;
 	border-radius: 50%;
+}
+.moving-bike {
+	margin: clamp(calc(0.3vw + var(--margin)), calc(0.7vw + var(--margin)), calc(0.9vw + var(--margin)))  
+						var(--col-offset) 
+						var(--padding) 
+						calc(5vw + var(--padding)
+				);
+	width: var(--logo-size);
+	aspect-ratio: 1;
+	border-radius: 50%;
+	z-index: 100;
+	position: fixed;
+	top: 0;
+	left: 0;
 }
 
 .menu {
