--- a/public/css/animation.css
+++ b/public/css/animation.css
@@ -37,34 +37,54 @@
 	}
 }
 .moving-bike {
-	animation: fadeInRight 7s linear forwards;
+	animation: move 16s ease-in-out infinite;
 }
 
-@keyframes fadeInRight {
-	10% {
+@keyframes move {
+	0% {
+		opacity: 1;
+		transform: translatex(0px);
+	 }
+	 50% {
 		opacity: 0;
-		transform: translateX(-100%);
+		transform: translatex(250px);
+	 }
+	 100% {
+		 opacity: 1;
+		 transform: translatex(-10px);
+	 }
+}
+.wheel01 {
+	animation: ;
+}
+
+@keyframes spinner {
+	0% {
+		transform: translateX(0px);
+		transform: translateY(0px);
 	}
-	30% {
-		opacity: 0;
-		transform: translateX(-70%);
+	25% {
+		transform: translateX(15px);
+		transform: translateY(-35px);
 	}
 	50% {
-		opacity: 1;
-		transform: translateX(-50%);
+		transform: translateX(35px);
+		transform: translateY(-50px);
 	}
-	70% {
-		opacity: 1;
-		transform: translateX(-20%);
+	75% {
+		transform: translateX(70px);
+		transform: translateY(-35px);
 	}
 	100% {
-		opacity: 1;
-		transform: translateX(0);
+		transform: translateX(px);
+		transform: translateY(px);
 	}
 }
+
 .bike {
 	opacity: 0;
 	animation: dropIn 5s ease forwards;
+	animation-delay: calc(var(--duration) * 100ms);
 }
 
 @keyframes dropIn {
