chaged text on the index and main templates

--- a/templates/master.html
+++ b/templates/master.html
@@ -148,7 +148,10 @@
 		<section class="wrapper home_header">
 			<div class="intro">
 				<h2>Hi! I am a Junior Web-Developer</h2>
-				<p>I have lived and worked in Romania, Italy, Portugal and currently live in the United Kingdom. I was raised to strive for perfection and look for ways I can improve my life, work and my relationships.
+				<p>
+					Also knowned as "the queen of white space", my jorney as a developer started at the end of 2021 when I decied to quit my job in London and travel to Portugal as a digital nomad.
+					I have lerned that surfing and coding go hand in hand and each day I am facinated by what I can buid using HTML, CSS and JavaScript.
+					I strive to work with the latest cutting-edge development tools and procedures and I am open to new projects!
 				</p>
 				<button id="cvButton">View CV</button>
 			</div>
