--- a/templates/index.html
+++ b/templates/index.html
@@ -14,14 +14,8 @@
 	<section class="profile">
 		<h3>Profile</h3>
 		<p>
-			I started working in Italy at the age of 18. After one year I decided that I wanted to go back to Romania and start university. 
-			When I came back to visit the lovely lady I've worked for, I asked her if she was happy with the cleanner tacking care of her house, she said yes but then paused for a moment and stated, "Paula, non c'è nessuna come te!". 
-			That was the first compliment I had ever received towards my work and over the years I have strived to embody that impression with each job.
+			I am a professional creative web developer with 10+ years of experience in tech support and customer management. Passionate  about transforming client ideas into beautiful, functional design solutions always focusing on ways of improving my code.
 		</p>
-		<p>
-			A deep understanding of who I am and knowing that God is shapping me each day is what ultimatly motivates me to do my work well and have the right attitude towards people arround me.
-		</p>
-		
 	</section>
 	<section class="work-experience">
 		<h3>Work Experience</h3>
