--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,8 @@
 	<section class="profile">
 		<h3>Profile</h3>
 		<p>
-			I am a professional creative web developer with 10+ years of experience in tech support and customer management. Passionate  about transforming client ideas into beautiful, functional design solutions always focusing on ways of improving my code.
+			“Any fool can write code that a computer can understand. Good programmers write code that humans can understand.”
+			― Martin Fowler
 		</p>
 	</section>
 	<section class="work-experience">
@@ -22,9 +23,9 @@
 		<ol class="jobs">
 			<li>
 				<hgroup>
-					<h4>Twilio Inc. - Full time - London, England, UK</h4>
+					<h4>Twilio Inc. - London, England, UK</h4>
 					<h5 class="time-interval">
-						<time datetime="2012-04">Apr 2012</time> - <time datetime="2012-11">Nov 2012</time>
+						<time datetime="2019-03">Mar 2019</time> - <time datetime="2021-11">Nov 2021</time>
 					</h5>
 				</hgroup>
 				<ol class="roles">
@@ -49,9 +50,9 @@
 			</li>
 			<li>
 				<hgroup>
-					<h4>SendGrid Inc. - Full time - London, England, UK</h4>
+					<h4>SendGrid Inc. - London, England, UK</h4>
 					<h5 class="time-interval">
-						<time datetime="2012-04">Apr 2012</time> - <time datetime="2012-11">Nov 2012</time>
+						<time datetime="2016-10">Oct 2016</time> - <time datetime="2019-02">Feb 2019</time>
 					</h5>
 				</hgroup>
 				<ul class="roles">
@@ -70,9 +71,9 @@
 			</li>
 			<li>
 				<hgroup>
-					<h4>Intelligent Bee Web - Full time - Iasi, Romania</h4>
+					<h4>Intelligent Bee Web - Iasi, Romania</h4>
 					<h5 class="time-interval">
-						<time datetime="2012-04">Apr 2012</time> - <time datetime="2012-11">Nov 2012</time>
+						<time datetime="2012-04">Apr 2012</time> - <time datetime="2016-03">Mar 2016</time>
 					</h5>
 				</hgroup>
 				<ul class="roles">
