--- a/templates/master.html
+++ b/templates/master.html
@@ -149,9 +149,10 @@
 			<div class="intro">
 				<h2>Hi! I am a Junior Web-Developer</h2>
 				<p>
-					Also knowned as "the queen of white space", my jorney as a developer started at the end of 2021 when I decied to quit my job in London and travel to Portugal as a digital nomad.
-					I have lerned that surfing and coding go hand in hand and each day I am facinated by what I can buid using HTML, CSS and JavaScript.
-					I strive to work with the latest cutting-edge development tools and procedures and I am open to new projects!
+					My journey as a developer began at the end of 2021 when I made the decision to quit my job in London and become a web developer whille surfing in Portugal.
+					Along this jorney I have learned to appreciate the balance between easy to read and "DRY" code.
+					Combining my love for surfing and coding, I immerse myself in building exciting web apps every day using HTML, CSS, and JavaScript.
+					While aspiring to become a lead developer, my current focus is on continuously improving my skills to become the best possible developer.
 				</p>
 				<button id="cvButton">View CV</button>
 			</div>
@@ -180,34 +181,37 @@
 		<a href="/">
 			<svg class="moving-bike logo" viewBox="0 0 400 400" >
 				<g class="bike">
-				<!-- back wheel -->
-				<circle class="wheel01" cx="110" cy="280" r="50" />
-				<!-- horisontal line -->
-				<line x1="60" y1="280" x2="160" y2="280" />
-				<!-- 45 angle line -->
-				<line x1="75" y1="245" x2="145" y2="315" />
-				<!-- vertical line -->
-				<line x1="110" y1="230" x2="110" y2="330" />
-				<!-- 135 angle line -->
-				<line x1="145" y1="245" x2="75" y2="315" />
-				<!-- midle circle -->
-				<circle cx="110" cy="280" r="7" />
-				<!-- front wheel -->
-				<circle cx="280" cy="230" r="100" />
-				<line x1="280" y1="330" x2="280" y2="130" />
-				<rect x1="280" y1="330" x2="280" y2="130" ></rect>
-				<line x1="180" y1="230" x2="380" y2="230" />
-				<line x1="350" y1="160" x2="210" y2="300" />
-				<line x1="210" y1="160" x2="350" y2="300" />
-				<!-- midle circle /butucul -->
-				<circle cx="280" cy="230" r="13" />
-				<!-- bike body /structure -->
-				<line class="structure" x1="280" y1="220" x2="280" y2="100" />
-				<!-- curved lines - https://developer.mozilla.org/en-US/docs/Web/SVG/Tutorial/Paths 
-				d="M x y Q x1 y1, x y-->
-				<path class="structure" d="M 110 230 Q 140 110 280 110" stroke="black" fill="transparent" />
-				<path class="structure" d="M 280 100 Q 280 80 255 85" stroke="black" fill="transparent" />
-				<path class="structure" d="M 176 135 Q 140 140 130 120" stroke="black" fill="transparent" />
+					<!-- back wheel -->
+					<circle class="wheel01" cx="110" cy="280" r="50" />
+					<g class="back-wheel">
+					<!-- horisontal line -->
+						<line x1="60" y1="280" x2="160" y2="280" />
+						<!-- 45 angle line -->
+						<line x1="75" y1="245" x2="145" y2="315" />
+						<!-- vertical line -->
+						<line x1="110" y1="230" x2="110" y2="330" />
+						<!-- 135 angle line -->
+						<line x1="145" y1="245" x2="75" y2="315" />
+					</g>
+					<!-- midle circle -->
+					<circle cx="110" cy="280" r="7" />
+					<!-- front wheel -->
+					<circle cx="280" cy="230" r="100" />
+					<g class="front-wheel">
+						<line x1="280" y1="330" x2="280" y2="130" />
+						<line x1="180" y1="230" x2="380" y2="230" />
+						<line x1="350" y1="160" x2="210" y2="300" />
+						<line x1="210" y1="160" x2="350" y2="300" />
+					</g>
+					<!-- midle circle /butucul -->
+					<circle cx="280" cy="230" r="13" />
+					<!-- bike body /structure -->
+					<line class="structure" x1="280" y1="220" x2="280" y2="100" />
+					<!-- curved lines - https://developer.mozilla.org/en-US/docs/Web/SVG/Tutorial/Paths 
+					d="M x y Q x1 y1, x y-->
+					<path class="structure" d="M 110 230 Q 140 110 280 110" stroke="black" fill="transparent" />
+					<path class="structure" d="M 280 100 Q 280 80 255 85" stroke="black" fill="transparent" />
+					<path class="structure" d="M 176 135 Q 140 140 130 120" stroke="black" fill="transparent" />
 				</g>
 				<defs>
 				<!-- gradient -->
@@ -224,34 +228,38 @@
 					<svg viewBox="0 0 400 400">
 						<circle class="main-circle" cx="200" cy="200" r="200" />
 						<g class="bike">
-						<!-- back wheel -->
-						<circle cx="110" cy="280" r="50" />
-						<!-- horisontal line -->
-						<line x1="60" y1="280" x2="160" y2="280" />
-						<!-- 45 angle line -->
-						<line x1="75" y1="245" x2="145" y2="315" />
-						<!-- vertical line -->
-						<line x1="110" y1="230" x2="110" y2="330" />
-						<!-- 135 angle line -->
-						<line x1="145" y1="245" x2="75" y2="315" />
-						<!-- midle circle -->
-						<circle cx="110" cy="280" r="7" />
-						<!-- front wheel -->
-						<circle cx="280" cy="230" r="100" />
-						<line x1="280" y1="330" x2="280" y2="130" />
-						<rect x1="280" y1="330" x2="280" y2="130" ></rect>
-						<line x1="180" y1="230" x2="380" y2="230" />
-						<line x1="350" y1="160" x2="210" y2="300" />
-						<line x1="210" y1="160" x2="350" y2="300" />
-						<!-- midle circle /butucul -->
-						<circle cx="280" cy="230" r="13" />
-						<!-- bike body /structure -->
-						<line class="structure" x1="280" y1="220" x2="280" y2="100" />
-						<!-- curved lines - https://developer.mozilla.org/en-US/docs/Web/SVG/Tutorial/Paths 
-						d="M x y Q x1 y1, x y-->
-						<path class="structure" d="M 110 230 Q 140 110 280 110" stroke="black" fill="transparent" />
-						<path class="structure" d="M 280 100 Q 280 80 255 85" stroke="black" fill="transparent" />
-						<path class="structure" d="M 176 135 Q 140 140 130 120" stroke="black" fill="transparent" />
+							<!-- back wheel -->
+							<circle cx="110" cy="280" r="50" />
+							<g class="back-wheel">
+								<!-- horisontal line -->
+								<line x1="60" y1="280" x2="160" y2="280" />
+								<!-- 45 angle line -->
+								<line x1="75" y1="245" x2="145" y2="315" />
+								<!-- vertical line -->
+								<line x1="110" y1="230" x2="110" y2="330" />
+								<!-- 135 angle line -->
+								<line x1="145" y1="245" x2="75" y2="315" />
+							</g>
+							<!-- midle circle -->
+							<circle cx="110" cy="280" r="7" />
+							<!-- front wheel -->
+							<circle cx="280" cy="230" r="100" />
+							<g class="front-wheel">
+								<line x1="280" y1="330" x2="280" y2="130" />
+								<rect x1="280" y1="330" x2="280" y2="130" ></rect>
+								<line x1="180" y1="230" x2="380" y2="230" />
+								<line x1="350" y1="160" x2="210" y2="300" />
+								<line x1="210" y1="160" x2="350" y2="300" />
+							</g>
+							<!-- midle circle /butucul -->
+							<circle cx="280" cy="230" r="13" />
+							<!-- bike body /structure -->
+							<line class="structure" x1="280" y1="220" x2="280" y2="100" />
+							<!-- curved lines - https://developer.mozilla.org/en-US/docs/Web/SVG/Tutorial/Paths 
+							d="M x y Q x1 y1, x y-->
+							<path class="structure" d="M 110 230 Q 140 110 280 110" stroke="black" fill="transparent" />
+							<path class="structure" d="M 280 100 Q 280 80 255 85" stroke="black" fill="transparent" />
+							<path class="structure" d="M 176 135 Q 140 140 130 120" stroke="black" fill="transparent" />
 						</g>
 						<defs>
 						<!-- gradient -->
@@ -284,8 +292,10 @@
 		{{{ main }}}
 	</main>
 	<footer class="wrapper">
-		<a href="#">&copy; Paula Burghelea {{ year }}</a>
-		<a href="#">Privacy Policy</a>
+		{{ #footer }}
+			<a href="{{ path }}">{{ title }}</a>
+			<!-- &copy; Paula Burghelea {{ year }} -->
+		{{ /footer }}
 	</footer>
 	
 </body>
