--- a/templates/index.html
+++ b/templates/index.html
@@ -106,11 +106,11 @@
 	<section class="skills">
 		<h3>Skills</h3>
 		<ul>
-			<li>HTML, SVG &amp; XML</li>
-			<li>CSS</li>
-			<li>JavaScript and RESTful APIs</li>
+			<li>HTML5, SVG &amp; XML</li>
+			<li>CSS3, Saas</li>
+			<li>JavaScript(ES6) and RESTful APIs</li>
 			<li>.NET C#</li>
-			<li>React and other frameworks</li>
+			<li>React.js, Express and other frameworks</li>
 			<li>Troubleshooting &amp; Technical Support</li>
 			<li>Email: SMTP, DNS, Deliverability &amp; Spam Filtering</li>
 			<li>SMPP &amp; Voice</li>
@@ -141,9 +141,9 @@
 				<ul>
 					<li>Developed and deployed full Stack applications over the course of a 30 weeks bootcamp program;</li>
 					<li>Lerned about the constituent parts of the internet and websites / web applications: The client-server model (inc. APIs);</li>
-					<li>Programming languages and libraries to control those constituent parts e.g. HTML, CSS, JavaScript (inc. NodeJS & React), SQL/NoSQL, Shell, GraphQL, JSON and YAML;</li>
+					<li>Programming languages and libraries to control those constituent parts e.g. HTML, CSS, JavaScript (inc. NodeJS & React), SQL/NoSQL, Shell, GraphQL, JSON;</li>
 					<li>Learned how to use tools & systems to create, edit, debug, test, deploy & host my code;</li>
-					<li>Industry standards and best practice for writing software.</li>
+					<li>Learned about industry standards and best practice for writing software.</li>
 				</ul>
 			</li>
 			<li>
