--- a/public/css/animation.css
+++ b/public/css/animation.css
@@ -37,7 +37,7 @@
 	}
 }
 .moving-bike {
-	animation: move 16s ease-in-out infinite;
+	animation: move 16s ease-in-out infinite 1s;
 }
 
 @keyframes move {
