--- a/templates/about.html
+++ b/templates/about.html
@@ -1,3 +1,10 @@
-<article>
-	<h1> {{ title }}</h1>
-</article>
+<section id="about-page">
+	<ul>
+		<li>1</li>
+		<li>2</li>
+		<li>3</li>
+		<li>4</li>
+		<li>5</li>
+		<li>6</li>
+	</ul>
+</section>
