--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,7 +1,9 @@
 section {
-	margin-left: auto;
+	display: flex;
+	margin: 40px auto 90px;
+	/* margin-left: auto;
 	margin-right: auto;
-	margin-bottom: 80px;
+	margin-bottom: 80px; */
 	width: calc(100% - 10.6667vw);
 }
 
@@ -16,13 +18,20 @@ a {
 	color: inherit;
 }
 
+figure {
+	display: block;
+	margin: 0;
+}
 list-img {
-	width: 100%;
-	height: 100%;
+	height: 40vmin;
+	height: 50vmin;
+	/* margin: 0;
+	padding: 0; */
+	object-fit: cover;
+	position: center;
 }
 
-img {
-	margin: 0;
-	padding: 0;
-	aspect-ratio: auto 764 / 1368;
+section h3::after {
+	display: none !important;
 }
+
